--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 <script type="text/javascript">
 //EDIT UNDER THIS ONLY
 
-const  firebaseConfig = {
-apiKey: "API KEY",
-authDomain: "AUTH DOMAIN",
-databaseURL: "DATABSE URL",
-projectId: "PROJECT ID",
-storageBucket: "BUCKET URL",
-messagingSenderId: "SENDER ID",
-appId: "APP ID"
-};
+const firebaseConfig = {
+    apiKey: "AIzaSyA3HNvuwTSdvDqVAotNC6DAds_aj0RCaQU",
+    authDomain: "erazx-12553.firebaseapp.com",
+    databaseURL: "https://erazx-12553-default-rtdb.firebaseio.com",
+    projectId: "erazx-12553",
+    storageBucket: "erazx-12553.appspot.com",
+    messagingSenderId: "390928148222",
+    appId: "1:390928148222:web:ccb475afff198aa2f527af"
+  };
  
 
 //DON'T EDIT BELOW THIS
